--- a/style.css
+++ b/style.css
@@ -14,10 +14,21 @@ label {
     margin: 10 0 0 50;
     font-family: Arial, Helvetica, sans-serif;
 }
-input, select {
+select, input {
   display: inline-block;
   text-align: left;
   margin: 10 0 0 -150;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {    
+  -webkit-appearance: none;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
 
 button, #result {
@@ -68,4 +79,8 @@ fieldset {
     border-radius: 100%;
     background: Blue;
     cursor: pointer;
+  }
+  
+  .highlight {
+    background-color: yellow;
   }
